--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>raganw.github.com</title>
-    </head>
-    <body>
-        TBA
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Redirecting to github.com/raganw/</title>
+    <meta http-equiv="refresh" content="0; URL=https://github.com/raganw">
+    <link href="https://github.com/raganw" rel="me">
+    <link href="https://ragan.is/" rel="me">
+    <link href="https://mastodon.social/@raganw" rel="me">
+  </head>
+  <body style="margin: 0; padding: 0">
+    <a
+      href="https://github.com/raganw"
+      style="
+        display: block;
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        padding: 0;
+        color: white;
+      "
+    >
+      github.com/raganw
+    </a>
+  </body>
 </html>
